Deny candidate implemented
