# controller/controller.go
@@ -57,7 +57,6 @@ func (c *Controller) ReadCandidate(ctx *gin.Context) {
 // @Failure default {object} object httputil.DefaultError
 // @Router /createCandidate [post]
 func (c *Controller) CreateCandidate(ctx *gin.Context) {
-	
 	var candidate models.Candidate
 	json.NewDecoder(ctx.Request.Body).Decode(&candidate)
 	result, err := c.Database.Collection(models.CandidateTableName()).InsertOne(ctx, candidate)
@@ -84,4 +83,29 @@ func (c *Controller) DeleteCandidate(ctx *gin.Context) {
 		ctx.JSON(http.StatusNotFound, err.Error())
 	}
 	ctx.JSON(http.StatusOK, result.DeletedCount)
+}
+
+
+// DenyCandidate godoc
+// @Summary Deny candidates
+// @Description Denies a candidate
+// @Accept  json
+// @Produce  json
+// @Param id query string false "name search by id"
+// @Success 200 {object} object model.Account
+// @Header 200 {string} Token "qwerty"
+// @Failure default {object} object httputil.DefaultError
+// @Router /denyCandidate [put]
+func (c *Controller) DenyCandidate(ctx *gin.Context) {
+	id := ctx.Query("id")
+	var candidate models.Candidate
+	c.Database.Collection(models.CandidateTableName()).FindOne(ctx, bson.M{"_id":id}).Decode(&candidate)
+	update := bson.M {
+		"$set": candidate.Deny(),
+	}
+	result, err := c.Database.Collection(models.CandidateTableName()).UpdateOne(ctx, bson.M{"_id":id}, update)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, err.Error())
+	}
+	ctx.JSON(http.StatusOK, result)
 }
